# pySUMMA

./: .gitignore  README.md  setup.cfg
.github/workflows/: unittests.yml
example/: inferred_prevalence.txt  sml_sim_and_fit.py  summa_inferred_prevalence.txt  summa_sim_and_fit.py
summa/: classifiers.py  decomposition.py  plot.py  simulate.py  stats.py
test/: test_classifiers.py  test_decomp.py  test_simulate.py  test_stats.py  test_summa.py
