[metadata]
name = summa
version = attr: summa.__version__
description = summa: methods for aggregating predictions by binary classification.
long_description = file: README.md
license = Apache License 2.0
author = Robert Vogel and Mehmet Eren Ahsen


[options]
packages = 
    summa
python_requires = >= 3.8
install_requires = 
    numpy >= 1.22.4
    scipy >= 1.6.3
    matplotlib >= 3.5.2
